# src/main/java/com/sergiostefanizzi/profilemicroservice/model/ProfileJpa.java
@@ -66,6 +66,14 @@ public class ProfileJpa {
     @JsonBackReference
     private List<PostJpa> postList;
 
+    @OneToMany(mappedBy = "createdBy")
+    @JsonBackReference
+    private List<AlertJpa> alertList;
+
+    @OneToMany(mappedBy = "managedBy")
+    @JsonBackReference
+    private List<AlertJpa> managedAlertList;
+
     @Version
     @Column(name = "version", nullable = false)
     private Long version;
